Made small WAYF changes per Greg's requst.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@564 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/webApplication/wayf.css
+++ b/webApplication/wayf.css
@@ -97,8 +97,8 @@ span.option {
 span.warning {
 	font-size: 80%;
 }
-span.incommon {
-	font-size: larger;
-	font-weight: bolder;
-	color: #FFFFFF;
+
+.logo {
+	text-align: center;
+	margin-top: 1.5em;
 }
