--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -1,6 +1,10 @@
 body {font-size:12px;font-family:arial,helvetica,sans-serif;margin:80px auto 20px auto;width:480px;}
 
+iframe {position:absolute;top:-1000px;}
+
 h1 {font-size:28px;color:#555;padding-bottom:8px;margin:2px 8px;border-bottom:1px solid #a2a2a2;}
 .content {border:2px solid #666;padding:5px;margin:5px;}
 .row {clear:both;padding:6px 8px;font-size:14px;}
 .row img {padding-left:10px;border:0;}
+
+.result {display:none;clear:both;padding:6px 8px;font-size:14px;color:#159015;}
