--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -3,8 +3,14 @@ body {font-size:12px;font-family:arial,helvetica,sans-serif;margin:80px auto 20p
 iframe {position:absolute;top:-1000px;}
 
 h1 {font-size:28px;color:#555;padding-bottom:8px;margin:2px 8px;border-bottom:1px solid #a2a2a2;}
+h2 {font-size:20px;color:#555;padding:4px 0;margin:2px 8px;}
+
+form {float:left;padding:5px 10px 5px 30px;margin:0;}
+
 .content {border:2px solid #666;padding:5px;margin:5px;}
-.row {clear:both;padding:6px 8px;font-size:14px;}
-.row img {padding-left:10px;border:0;}
+.row {clear:both;padding:6px 10px;font-size:14px; background-image: url('../images/list_image.png');background-repeat: no-repeat;background-position: 2px 12px;	 list-style-type: none; margin-left:8px;}
+.row img {padding-left:10px;border:0;width:14px;height:14px;}
 
 .result {display:none;clear:both;padding:6px 8px;font-size:14px;color:#159015;}
+.controller {clear:both;padding:5px 8px; font-size:20px; font-weight:bold;background-color:#d2d2d2;margin:10px 0 4px 0;}
+
