--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -5,14 +5,16 @@ iframe {position:absolute;top:-1000px;}
 h1 {font-size:28px;color:#555;padding-bottom:8px;margin:2px 8px;border-bottom:1px solid #a2a2a2;}
 h2 {font-size:20px;color:#555;padding:4px 0;margin:2px 8px;}
 
-form {float:left;padding:5px 10px 5px 30px;margin:0;}
+form {float:left;padding:5px 10px;margin:0;text-align:center;}
 
 .content {border:2px solid #666;padding:5px;margin:5px;}
-.row {clear:both;padding:6px 10px;font-size:14px; background-image: url('../images/list_image.png');background-repeat: no-repeat;background-position: 2px 12px;	 list-style-type: none; margin-left:8px;}
+.row {clear:both;padding:6px 14px;font-size:14px; background-image: url('../images/list_image.png');background-repeat: no-repeat;background-position: 2px 12px;	 list-style-type: none; margin-left:8px;}
 .row img {padding-left:10px;border:0;width:14px;height:14px;}
 
 .controller {clear:both;padding:5px 8px; font-size:20px; font-weight:bold;background-color:#d2d2d2;margin:10px 0 4px 0;}
 
-#result {clear:both;padding:6px 8px;font-size:14px;}
+#result {clear:both;padding:8px 0 15px 0;font-size:16px;text-align:center;font-weight:bold;}
 .success {color:#159015;}
 .fail {color:red;}
+
+.clear {clear:both;}
