--- a/src/main/webapp/login.css
+++ b/src/main/webapp/login.css
@@ -6,7 +6,7 @@ div.loginbox {
 }
 
 div.loginbox div.leftpane {
-    border: 2px #A40000 solid;
+    border: 2px #344B83 solid;
     position: absolute;
     top: 10px;
     left: 10px;
@@ -15,7 +15,7 @@ div.loginbox div.leftpane {
 }
 
 div.loginbox div.rightpane {
-	border: 2px #A40000 solid;
+    border: 2px #344B83 solid;
     position: absolute;
     top: 10px;
     right: 10px;
